# solana-verifier

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml  used_rows.txt
.cargo/: config.toml
client/: Cargo.toml
client/examples/: add.rs  cast.rs  eval_composition_polynomial_inner.rs  eval_oods_polynomial_inner.rs  exp.rs  fib.rs  fri_commit.rs  full_flow.rs  get_hash.rs  greeting.rs  hades.rs  hash_public_input.rs  mul.rs  pedersen.rs  poseidon.rs  proof_of_work.rs  set_proof.rs  stark_commit.rs  transcript.rs  validate_public_input.rs  vector_decommit.rs
client/src/: config.rs  deploy.rs  error.rs  lib.rs  main.rs  retrive_funds.rs  utils.rs  verify.rs
parser/: Cargo.toml
programs/verifier/: Cargo.toml  build.rs
programs/verifier/src/: instruction.rs  processor.rs  state.rs
programs/verifier/tests/: arithmetic_test.rs  compute_query_points_test.rs  eval_composition_polynomial_inner_test.rs  eval_composition_polynomial_test.rs  eval_oods_polynomial_inner_test.rs  fri_commit.rs  fri_verify_test.rs  generate_interaction_elements_test.rs  get_hash.rs  hades_test.rs  hash_public_inputs.rs  init_proof.rs  pedersen_test.rs  poseidon_test.rs  poseidon_two_el_test.rs  powers_array_test.rs  proof_of_work_test.rs  public_input.rs  stark_commit_test.rs  stark_commit_tests.rs  table_commit_test.rs  table_decommit_test.rs  traces_commit_test.rs  transcript_random_felt_test.rs  transcript_read_felt_test.rs  transcript_read_felt_vector_test.rs  transcript_test.rs  validate_public_input.rs  vector_commit_test.rs  vector_decommit_test.rs  verify.rs  verify_oods_test.rs
programs/verifier/tests/fixtures/: commitment.rs  config.rs  constraint_coefficients.rs  fri_commitment.rs  fri_config.rs  fri_decommitment.rs  fri_unsent_commitment.rs  fri_witness.rs  interaction_elements.rs  mod.rs  oods_values.rs  public_input.rs  queries.rs  stark_commitment.rs  stark_config.rs  stark_domains.rs  stark_witness.rs  trace_decommitment.rs  unsent_commitment.rs  witness.rs
programs/verifier/tests/fixtures/witness/: layer_0.rs  layer_1.rs  layer_2.rs  layer_3.rs  layer_4.rs  layer_5.rs  layer_6.rs  mod.rs
(+77 files in other folders)
