[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
borsh.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
solana-cli-config = "2.2.1"
solana-client = "2.2.1"
solana-program.workspace = true
solana-sdk = "2.2.1"
solana-system-interface.workspace = true
thiserror.workspace = true
starknet-types-core = { version = "0.1.8", features = ["hash"] }
starknet-crypto = "0.7.1"
swiftness_proof_parser = { path = "../parser" }
greeting.workspace = true
verifier.workspace = true
utils.workspace = true
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
arithmetic.workspace = true
stark.workspace = true
tokio = "1.44.2"
futures = "0.3.31"
env_logger = {version = "0.11.6",features = ["unstable-kv"]}
log = {version = "0.4.22",features = ["kv"]}